--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
     <head>
         <title>Hello</title>
+        <style>
+            h1{
+                color:red;
+                font-size:40pt
+            }
+        </style>
     </head>
     <body>
         <h1>Hello their I am here</h1>
+        <h1>Now I am here</h1>
     </body>
 </html>
